tests/cases_invalid/misc/expr_empty/.expected
error: expected expression
 --> ./cases_invalid/misc/expr_empty/main.shd:1:13
  |
1 | buf value = ;
  |             ^ here
  |
